<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backing_tracks_bg"
    tools:context="com.musicapplication.activity.LoginActivity">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <ImageView
                android:id="@+id/iv_logo"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="40dp"
                android:src="@drawable/logo" />


            <EditText
                android:id="@+id/edt_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/iv_logo"
                android:layout_centerHorizontal="true"
                android:layout_marginLeft="@dimen/dimen50"
                android:layout_marginRight="@dimen/dimen50"
                android:layout_marginTop="45dp"
                android:background="@null"
                android:ems="10"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:padding="@dimen/dimen8"
                android:textColor="@color/white"
                android:textColorHint="@color/white" />

            <View
                android:id="@+id/view1"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_below="@+id/edt_email"
                android:layout_marginLeft="@dimen/dimen50"
                android:layout_marginRight="@dimen/dimen50"
                android:background="#ffffff">

            </View>

            <EditText
                android:id="@+id/edt_pass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/view1"
                android:layout_centerHorizontal="true"
                android:layout_marginLeft="@dimen/dimen50"
                android:layout_marginRight="@dimen/dimen50"
                android:layout_marginTop="25dp"
                android:background="@null"
                android:ems="10"
                android:hint="@string/pass"
                android:inputType="textPassword"
                android:padding="@dimen/dimen8"
                android:textColor="@color/white"
                android:textColorHint="@color/white" />

            <View
                android:id="@+id/view2"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_below="@+id/edt_pass"
                android:layout_marginLeft="@dimen/dimen50"
                android:layout_marginRight="@dimen/dimen50"
                android:background="#ffffff">

            </View>

            <TextView
                android:id="@+id/tv_forgot_pass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignEnd="@+id/edt_pass"
                android:layout_alignRight="@+id/edt_pass"
                android:layout_below="@+id/edt_pass"
                android:layout_marginTop="13dp"
                android:text="@string/forgot_pass"
                android:textColor="@color/white"
                android:textSize="@dimen/txt_extra_small" />


            <Button
                android:id="@+id/btn_signin"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_forgot_pass"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="25dp"
                android:background="@drawable/roundbox"
                android:text="@string/sign_in"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="@dimen/txt_medium2" />


            <TextView
                android:id="@+id/tv_or"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/btn_signin"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:text="@string/or"
                android:textColor="@color/white"
                android:textSize="@dimen/txt_medium" />


            <Button
                android:id="@+id/btn_gmail"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_or"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:elevation="@dimen/dimen8"

                android:background="@mipmap/login_with_google_icon" />

            <LinearLayout

                android:id="@+id/ll_signup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/btn_gmail"
                android:layout_marginTop="13dp"
                android:gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/new_user_signup"
                    android:textColor="@color/white"
                    android:textSize="@dimen/txt_small" />


                <TextView
                    android:layout_marginLeft="@dimen/dimen2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sign_up"
                    android:textColor="@color/white"
                    android:textSize="@dimen/txt_medium" />
            </LinearLayout>


        </RelativeLayout>
    </ScrollView>

</RelativeLayout>
