<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.musicapplication.fragment.Back_TracksFragment">

    <RelativeLayout
        android:id="@+id/rl_first"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="55dp"
        tools:context="com.musicapplication.fragment.Back_TracksFragment">

        <Button
            android:id="@+id/ib_cover"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignTop="@+id/ib_blue"

            android:elevation="50dp"
            android:gravity="center"
            android:textSize="@dimen/txt_extra_small"
            android:layout_marginLeft="29dp"
            android:layout_marginStart="29dp"
            android:textColor="@color/white"
            android:background="@drawable/cover_button"
            android:scaleX="1.2"

            android:scaleY="1.3"
            />

        <Button
            android:id="@+id/ib_blue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_marginEnd="38dp"
            android:layout_marginRight="38dp"
            android:layout_marginTop="28dp"
            android:textSize="@dimen/txt_extra_small"
            android:gravity="center"
            android:textColor="@color/white"
            android:background="@drawable/blue_button"

            android:scaleX="1.2"
            android:scaleY="1.3"
            />


    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/rl_second"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rl_first"
        tools:context="com.musicapplication.fragment.Back_TracksFragment">

        <Button
            android:id="@+id/ib_rock"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignTop="@+id/ib_electronic"
            android:layout_marginLeft="29dp"
            android:layout_marginRight="@dimen/dimen10"
            android:textSize="@dimen/txt_extra_small"
            android:gravity="center"

            android:layout_marginStart="29dp"
            android:background="@drawable/rock"
            android:text="@string/rock"
            android:textColor="@color/white"
            android:scaleX="1.2"
            android:scaleY="1.3"
            />

        <Button
            android:id="@+id/ib_electronic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_marginEnd="38dp"
            android:layout_marginLeft="@dimen/dimen10"
            android:layout_marginRight="38dp"
            android:layout_marginTop="50dp"
            android:textSize="@dimen/txt_extra_small"
            android:gravity="center"

            android:textColor="@color/white"
            android:scaleX="1.2"
            android:scaleY="1.3"
            android:background="@drawable/electronic" />


    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rl_second"
        tools:context="com.musicapplication.fragment.Back_TracksFragment">

        <Button
            android:id="@+id/ib_reggae"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignTop="@+id/jazz"
            android:layout_marginLeft="29dp"
            android:layout_marginStart="29dp"
            android:scaleX="1.2"
            android:scaleY="1.3"
            android:textSize="@dimen/txt_extra_small"
            android:gravity="center"

            android:text="@string/reggae"
            android:textColor="@color/white"
            android:textAllCaps="true"
            android:background="@drawable/reggae" />

        <Button
            android:id="@+id/jazz"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:gravity="center"

            android:textStyle="normal"
            android:layout_marginEnd="38dp"
            android:layout_marginRight="38dp"
            android:layout_marginTop="50dp"
            android:text="@string/jazz"
            android:textColor="@color/white"
            android:textSize="@dimen/txt_extra_small"

            android:scaleX="1.2"
            android:scaleY="1.3"
            android:background="@drawable/spacejuzz" />


    </RelativeLayout>

</RelativeLayout>
